added large text

--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
           </nav>
         </div>
         <div class="background flex-center">
-          <div class="hero-message">
+        <div class=large-text>
+           <p>Start Learning English Now</p>
+        </div>
+           <div class="hero-message">
               <p>Call us on 0131 669465</p>
               <p>Email info@peakenglish.co.uk</p>
               <p>Apply Now</p>
               <p>Special Summer Offers</p>
-          </div>
-        </div>
+           </div>
+         </div>
       </section>
 
 
