large text and buttons added

--- a/index.html
+++ b/index.html
@@ -19,28 +19,33 @@
           </select>
         </form>
         <img src="images/logo.jpg" alt="The Peak English logo"
-        style="width:100px;height:50px;">
+        style="width:100px;height:40px;">
       </header>
       <section class="main">
         <div class="navigation">
           <nav>
-            <a href="#">About our School</a>
-            <a href="#">Courses</a>
-            <a href="#">Exams</a>
-            <a href="#">Social Events!</a>
-            <a href="#">Contact Us</a>
+            <div class="button-group">
+              <a href="#"><button>About our School</button></a>
+              <a href="#"><button>Courses</button></a>
+              <a href="#"><button>Exams</button></a>
+              <a href="#"><button>Social Events</button></a>
+              <a href="#"><button>Contact Us</button></a>
+            </div>
           </nav>
         </div>
         <div class="background flex-center">
-        <div class=large-text>
-           <p>Start Learning English Now</p>
-        </div>
-           <div class="hero-message">
-              <p>Call us on 0131 669465</p>
-              <p>Email info@peakenglish.co.uk</p>
-              <p>Apply Now</p>
-              <p>Special Summer Offers</p>
+           <div class=large-text>
+             <p>Start Learning English Now</p>
            </div>
+           <div class="hero-message">
+              <p>Peak English is a private language school located in Edinburgh's beautiful historic centre. We favour small groups where students receive more teacher attention. Our teachers are highly experienced and can deliver a variety of lessons tailored to your needs during your stay in Scotland's capital. Browse our courses and choose the best one for you.</p>
+           </div>
+         </div>
+         <div class="testimonials">
+           <p id="test-one">"The school is great<br>The teachers are friendly<br>and approachable"<br>-Elena, Czech Republic</p>
+           <p id="test-two">"I learned so much in my<br>time at Peak English"<br>-Salman, Saudi Arabia</p>
+           <p id="test-three">"I feel I have made great<br>progress, it's the best<br>school ever!""<br>-Valeryia, Belarus</p>
+
          </div>
       </section>
 
