--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head>
     <body>
       <header>
-        <p>Start Improving Your English Today
         <form>
           <label for="language">Select your language
           </label>
@@ -18,6 +17,7 @@
             <option value="russian">Russian</option>
           </select>
         </form>
+        <p>email: info@peakenglish.co.uk or call: 0131 669465</p>
         <img src="images/logo.jpg" alt="The Peak English logo"
         style="width:100px;height:40px;">
       </header>
@@ -25,7 +25,7 @@
         <div class="navigation">
           <nav>
             <div class="button-group">
-              <a href="#"><button>About our School</button></a>
+              <a href="about.html"><button>About our School</button></a>
               <a href="#"><button>Courses</button></a>
               <a href="#"><button>Exams</button></a>
               <a href="#"><button>Social Events</button></a>
@@ -42,25 +42,30 @@
            </div>
          </div>
          <div class="testimonials">
-           <p id="test-one">"The school is great<br>The teachers are friendly<br>and approachable"<br>-Elena, Czech Republic</p>
-           <p id="test-two">"I learned so much in my<br>time at Peak English"<br>-Salman, Saudi Arabia</p>
-           <p id="test-three">"I feel I have made great<br>progress, it's the best<br>school ever!""<br>-Valeryia, Belarus</p>
-
+           <p id="test-one">"The school is great<br>The teachers are friendly<br>and approachable"<br><br>-Elena, Czech Republic</p>
+           <p id="test-two">"I learned so much in my<br>time at Peak English"<br><br>-Salman, Saudi Arabia</p>
+           <p id="test-three">"I feel I have made great<br>progress, it's the best<br>school ever!"<br><br>-Valeryia, Belarus</p>
          </div>
       </section>
-
-
     </body>
     <footer>
-      <p>Address:<br/>59/4 Causewayside<br/>Edinburgh<br/>EH9 1QF</p>
-      <p><img src="images/whatsapp.png" alt="Whatsapp logo"
-        style="width:30px;height:30px;">
-        07403 474 555<p/>
-          <a href="https://www.facebook.com" target="_blank"><img src="images/facebook2.png" alt="Facebook logo"
+      <div id="address">
+        <p>Address:<br/>59/4 Causewayside<br/>Edinburgh<br/>EH9 1QF</p>
+      </div>
+      <div id="accreditations">
+        <img src="images/britishcouncil.png" alt="British Council logo"
+        style="width:120px;height:100px;">
+      </div>
+      <div id="social-media">
+         <a href="https://www.facebook.com" target="_blank"><img src="images/facebook2.png" alt="Facebook logo"
             style="width:70px;height:70px;"></a>
-          <a href="https://twitter.com/?lang=en-gb" target="_blank"><img src="images/twitter.png" alt="Twitter logo"
+         <a href="https://twitter.com/?lang=en-gb" target="_blank"><img src="images/twitter.png" alt="Twitter logo"
             style="width:70px;height:70px;"></a>
-          <img src="images/britishcouncil.png" alt="British Council logo"
-          style="width:200px;height:130px;">
+      </div>
+      <div id="whatsapp">
+         <p><img src="images/whatsapp.png" alt="Whatsapp logo"
+       style="width:30px;height:30px;">
+       07403 474 555<p/>
+      </div>
     </footer>
   </html>
