--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <div class="navigation">
           <nav>
             <div class="button-group">
-              <a href="about.html"><button>About our School</button></a>
-              <a href="#"><button>Courses</button></a>
-              <a href="#"><button>Exams</button></a>
-              <a href="#"><button>Social Events</button></a>
-              <a href="#"><button>Contact Us</button></a>
+              <a href="about.html"><button id="about">About our School</button></a>
+              <a href="#"><button id="courses">Courses</button></a>
+              <a href="#"><button id="exams">Exams</button></a>
+              <a href="#"><button id="social-events">Social Events</button></a>
+              <a href="#"><button id="contact-us">Contact Us</button></a>
             </div>
           </nav>
         </div>
